objects/Registration_Membership__c.object
<CustomObject>
    <fields>
        <fullName>Advisory_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advisory Event</label>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipLabel>Registration Memberships</relationshipLabel>
        <relationshipName>Registration_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Registration__c</fullName>
        <label>Event Registration</label>
        <referenceTo>Event_Registration__c</referenceTo>
        <relationshipLabel>Registration Memberships</relationshipLabel>
        <relationshipName>Registration_Memberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Registration Memberships</relationshipLabel>
        <relationshipName>Registration_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Registration Memberships</relationshipLabel>
        <relationshipName>Registration_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Registration Membership</label>
    <nameField>
        <label>Registration Membership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>